--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>notification-client</module>
         <module>notification-service</module>
+        <module>legacy</module>
     </modules>
 
     <parent>
