--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,24 @@
 version: '3.9'
 
 services:
-  client:
+  legacy:
     build:
-      context: .
+      context: legacy
       dockerfile: src/main/resources/library.dockerfile
+    environment:
+      NOTIFICATION_SERVICE_URL: http://notification:8080
+    ports:
+      - "8080:8080"
+    networks:
+      - network1
+  notification:
+    build:
+      context: notification-service
+      dockerfile: src/main/resources/notification.dockerfile
     expose:
       - 8080
     ports:
-      - "8080:8080"
+      - "8090:8080"
     networks:
       - network1
 networks:
