Task 3. Fix Spring configuration

--- a/legacy/pom.xml
+++ b/legacy/pom.xml
@@ -9,7 +9,6 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.example</groupId>
     <artifactId>legacy</artifactId>
 
     <properties>
@@ -23,6 +22,10 @@
             <groupId>fwdays</groupId>
             <artifactId>notification-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
 
