--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,26 @@ services:
       - "8090:8080"
     networks:
       - network1
+  book:
+    build:
+      context: book-service
+      dockerfile: src/main/resources/book.dockerfile
+    expose:
+      - 8080
+    ports:
+      - "8100:8080"
+    networks:
+      - network1
+  delivery:
+    build:
+      context: delivery-service
+      dockerfile: src/main/resources/delivery.dockerfile
+    expose:
+      - 8080
+    ports:
+      - "8100:8080"
+    networks:
+      - network1
 networks:
   network1:
     driver: bridge
