--- a/delivery-service/src/main/resources/application.yml
+++ b/delivery-service/src/main/resources/application.yml
@@ -1,5 +1,14 @@
 spring:
   kafka:
+    consumer:
+      bootstrap-servers:
+        - ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+      group-id: payment-service
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
     producer:
       bootstrap-servers:
         - ${KAFKA_BROKERS:localhost:9092}
