--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       context: delivery-service
       dockerfile: src/main/resources/delivery.dockerfile
     environment:
-      KAFKA_BROKERS: "kafka: 29092"
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
     expose:
       - 8080
     ports:
@@ -62,6 +62,7 @@ services:
       dockerfile: src/main/resources/payment.dockerfile
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+      - ORDER_SERVICE_URL=http://order:8080
     expose:
       - 8080
     ports:
